Projeto Extra POO + DB: SISTEMA DE CADASTRO DE CLIENTES v1.0