@@ -1,31 +1,28 @@
 package projetoExtra.services;
 
-import projetoExtra.entities.Endereco;
-import projetoExtra.exceptions.CEPInvalidoException;
+import projetoExtra.entities.Address;
+import projetoExtra.exceptions.InvalidZipCodeException;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 public class APIConsumer {
 
-    private static final String VIA_CEP_URL = "https://viacep.com.br/ws/";
-
-    public Endereco consultarCEP(String cep) throws CEPInvalidoException {
-        // Estruturas lógicas: validação do CEP
-        if (cep == null || cep.trim().isEmpty()) {
-            throw new CEPInvalidoException("CEP não pode ser vazio");
+    public Address consultarCEP(String cep) throws InvalidZipCodeException {
+        if (cep == null || cep.trim().isEmpty() || !cep.matches("\\d{5}-?\\d{3}")) {
+            throw new InvalidZipCodeException("CEP inválido: " + cep);
         }
 
-        String cepLimpo = cep.replaceAll("[^0-9]", "");
-
-        if (cepLimpo.length() != 8) {
-            throw new CEPInvalidoException("CEP deve ter 8 dígitos");
-        }
+        cep = cep.replace("-", "");
+        String urlString = "https://viacep.com.br/ws/" + cep + "/json/";
 
         try {
-            URL url = new URL(VIA_CEP_URL + cepLimpo + "/json/");
+            URI uri = new URI(urlString);
+            URL url = uri.toURL();
+
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setConnectTimeout(5000);
@@ -33,60 +30,91 @@ public class APIConsumer {
 
             int responseCode = connection.getResponseCode();
             if (responseCode != 200) {
-                throw new CEPInvalidoException("Erro na consulta do CEP. Código: " + responseCode);
+                throw new InvalidZipCodeException("Erro ao consultar CEP. Código: " + responseCode);
             }
 
-            try (BufferedReader reader = new BufferedReader(
-                    new InputStreamReader(connection.getInputStream()))) {
+            BufferedReader reader = new BufferedReader(
+                    new InputStreamReader(connection.getInputStream())
+            );
 
-                StringBuilder response = new StringBuilder();
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    response.append(line);
-                }
-
-                return parseEnderecoFromJSON(response.toString(), cep);
+            StringBuilder response = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                response.append(line);
             }
+            reader.close();
+
+            System.out.println("🔍 Resposta da API: " + response.toString()); // DEBUG
+            return parseResponse(response.toString());
 
         } catch (Exception e) {
-            throw new CEPInvalidoException("Erro ao consultar CEP: " + e.getMessage());
+            throw new InvalidZipCodeException("Erro ao consultar CEP: " + e.getMessage());
         }
     }
 
-    private Endereco parseEnderecoFromJSON(String json, String cepOriginal) throws CEPInvalidoException {
-        if (json.contains("\"erro\": true")) {
-            throw new CEPInvalidoException("CEP não encontrado: " + cepOriginal);
+    private Address parseResponse(String jsonResponse) throws InvalidZipCodeException {
+        if (jsonResponse.contains("\"erro\": true") ||
+                jsonResponse.contains("\"erro\":true") ||
+                jsonResponse.trim().isEmpty() ||
+                jsonResponse.equals("{}")) {
+            throw new InvalidZipCodeException("CEP não encontrado na base de dados");
         }
 
         try {
-            String logradouro = extractValue(json, "logradouro");
-            String bairro = extractValue(json, "bairro");
-            String cidade = extractValue(json, "localidade");
-            String estado = extractValue(json, "uf");
+            String logradouro = extractValue(jsonResponse, "logradouro");
+            String bairro = extractValue(jsonResponse, "bairro");
+            String cidade = extractValue(jsonResponse, "localidade");
+            String estado = extractValue(jsonResponse, "uf");
+            String cep = extractValue(jsonResponse, "cep");
 
-            Endereco endereco = new Endereco();
-            endereco.setCep(cepOriginal);
-            endereco.setLogradouro(logradouro);
-            endereco.setBairro(bairro);
-            endereco.setCidade(cidade);
-            endereco.setEstado(estado);
+            System.out.println("🔍 Dados extraídos - Cidade: " + cidade + ", Estado: " + estado + ", CEP: " + cep); // DEBUG
 
-            return endereco;
+            if (cidade == null || estado == null || cep == null) {
+                throw new InvalidZipCodeException("Dados do CEP incompletos. Resposta: " + jsonResponse);
+            }
+
+            Address address = new Address();
+            address.setZipCode(cep);
+            address.setStreet(logradouro != null ? logradouro.trim() : "Não informado");
+            address.setNeighborhood(bairro != null ? bairro.trim() : "Não informado");
+            address.setCity(cidade);
+            address.setState(estado);
+
+            return address;
 
         } catch (Exception e) {
-            throw new CEPInvalidoException("Erro ao processar resposta da API: " + e.getMessage());
+            throw new InvalidZipCodeException("Erro ao processar resposta da API: " + e.getMessage() + " | Resposta: " + jsonResponse);
         }
     }
 
     private String extractValue(String json, String key) {
-        String searchKey = "\"" + key + "\":\"";
-        int startIndex = json.indexOf(searchKey);
-        if (startIndex == -1) return "";
+        try {
+            String searchKey = "\"" + key + "\":\"";
+            int start = json.indexOf(searchKey);
+            if (start == -1) {
+                searchKey = "\"" + key + "\":";
+                start = json.indexOf(searchKey);
+                if (start == -1) return null;
+                start += searchKey.length();
 
-        startIndex += searchKey.length();
-        int endIndex = json.indexOf("\"", startIndex);
+                int end = json.indexOf(",", start);
+                if (end == -1) end = json.indexOf("}", start);
+                if (end == -1) return null;
 
-        if (endIndex == -1) return "";
-        return json.substring(startIndex, endIndex);
+                String value = json.substring(start, end).trim();
+                if (value.startsWith("\"") && value.endsWith("\"")) {
+                    value = value.substring(1, value.length() - 1);
+                }
+                return value;
+            }
+
+            start += searchKey.length();
+            int end = json.indexOf("\"", start);
+            if (end == -1) return null;
+
+            return json.substring(start, end);
+        } catch (Exception e) {
+            return null;
+        }
     }
 }
